fixed hover z-index

--- a/styles/master.css
+++ b/styles/master.css
@@ -4,6 +4,7 @@
     font-weight: 900;
     font-style: normal;
     color: white;
+    text-decoration: none;
 }
 
 body {
@@ -48,7 +49,7 @@ h2{
 
 h3{
     position: absolute; /* boven de Ul*/
-    z-index: 1;
+    z-index: 2; /* voor fotos*/
     font-size: 3.4em;
     text-align: center;
     margin: 0em 0 -0.5em 0;
@@ -100,19 +101,24 @@ ul{
     z-index: -1em; /* zorgt ervoor dat tekst voor de ul bottom staat */
 }
 
-.bottom li{
+.bottom li, .bottom a {
     display:grid;
     grid-template-rows:10em max-content;
     grid-template-columns:1fr max-content;
 } /* Grids in li items (Alleen door onderste li items, bovenste list items krijgen andere code */
 
-.bottom li p{
+.bottom li p {
     font-size: 1.5em;
     grid-column-start:1;
     grid-row-start:1;   
     justify-self:center;
     align-self:start;
+    z-index: 1;
 } /* tekst in het midden en bovenkant van het plaatje*/
+
+.bottom li img{
+    z-index: 1;
+}
 
 li img {
     grid-column-start:1;
@@ -127,19 +133,9 @@ li {
     background-color:rgb(180, 147, 182);
 } 
 
-
 img {
     max-width: 12em;
     max-height: 12em;
-}
-
-footer{
-    background-color: darkmagenta;
-    p{
-        color: #D38FE8;
-    }
-
-    
 }
 
 .topfoto1{
@@ -161,7 +157,9 @@ footer{
 }
 
 .campus{
+    position: relative;
     color: white;
+    z-index: 3;
 }
 
 
@@ -173,18 +171,15 @@ footer{
     body {
         margin-top: 1.25em;
         margin-bottom: 0;
-        margin-left: 25%;
+        margin-left: 22%;
         margin-right: 25%; /* Edges*/
     }
-    .fdnd{
-    p{
+    .fdnd p{
       color: #F8A9E2; 
       font-size: 100%;
       align-content: center; 
     }
-    padding: 1em;
-
-}
+    }
 
 @media only screen and (min-width: 47em) {
     body {
@@ -230,9 +225,10 @@ footer{
         filter: grayscale(100%);
         transition-duration: .2s;
     }
-    img:hover{
+    .bottom img:hover{
         scale: 1.12;
         filter: grayscale(0%);
+        z-index: 1000; /* Boven alles wanneer hovert */
     }
     .fdnd{
         padding: 1em 2em;
